# market

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  prometheus.yml  pyproject.toml
clo/: asgi.py  middleware.py  pagination.py  permission.py  settings.py  urls.py  wsgi.py
clo/clo/: asgi.py  settings.py  urls.py  wsgi.py
clo/context/: models.py
clo/shop/: admin.py
clo/users/: admin.py  models.py  serializers.py
context/: models.py  swagger_json.py
frameworks/: utils.py
frameworks/ch_tables/: Iamges_status_history.py  __init__.py  add_to_favorites.py  obj_views.py  product_status_history.py  tables.py
frameworks/kafak/: client.py
init-db/: init-database.sh
nginx/: nginx.conf
shop/: admin.py  filters.py
shop/api/: address.py  images.py  product.py  serializers.py  shop.py  urls.py
shop/migrations/: 0002_brands_colors_sizes_product.py  0006_categories_product_category.py  0007_address.py  0009_productimages_color_remove_product_category_and_more.py  0010_remove_product_category_remove_product_color_and_more.py  0011_product_shop.py  0012_alter_product_brands_alter_product_category.py  0013_rename_delete_address_delete_at_and_more.py  0014_alter_product_brands_alter_product_category.py  0015_sizes_gender.py  0016_shop_icon_alter_productimages_image_shopimages.py  0017_shopreport.py  0018_brands_key.py  0019_remove_address_shop_shop_address.py  0020_productrating_shoprating_shopworkschedules.py  0023_product_additional_data_shop_additional_data.py  (+17 more)
users/: admin.py  backends.py  serializers.py  urls.py  views.py
(+42 files in other folders)
