[tool.poetry]
name = "clo-app"
version = "0.1.0"
description = ""
authors = ["zifrit <zifrit@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"
djangorestframework = "^3.15.2"
django-debug-toolbar = "^5.1.0"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
django-filter = "^25.1"
django-redis = "^5.4.0"
drf-spectacular = "^0.28.0"
redis = "^5.2.1"
django-extensions = "^3.2.3"
python-json-logger = "^3.3.0"
djangorestframework-simplejwt = "^5.5.0"
django-cors-headers = "^4.7.0"
boto3 = "^1.37.20"
django-storages = "^1.14.5"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
